<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_new"
        android:icon="@drawable/ic_add"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_lectures"
                android:title="@string/menu_main_lecture"
                app:showAsAction="never">
            </item>
            <item
                android:id="@+id/action_exams"
                android:title="@string/menu_main_exam"
                app:showAsAction="never">
            </item>
            <item
                android:id="@+id/action_meetings"
                android:title="@string/menu_main_meeting"
                app:showAsAction="never">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/action_show_settings"
        android:title="Einstellungen"
        app:showAsAction="never" />
</menu>